api adjusted